--- a/desafio02/desafio02.html
+++ b/desafio02/desafio02.html
@@ -16,7 +16,7 @@
             <input type="number" name="nascimento" id="inascimento" required>
             <br>
             <label for="isexo">Sexo: </label>
-            <input type="radio" name="sexo" id="imasc" value="M" required>
+            <input type="radio" name="sexo" id="imasc" value="M" required checked>
             <label for="imasc">Masculino</label>
             <input type="radio" name="sexo" id="ifem" value="F" required>
             <label for="ifem">Feminino</label>
