--- a/CFBCursos/aula054 - coleção MAP/index.html
+++ b/CFBCursos/aula054 - coleção MAP/index.html
@@ -6,7 +6,9 @@
     <title>Aula 54</title>
 </head>
 <body>
-    <div id="caixa" class="caixa"></div>
+    <div id="caixa1" class="caixa"></div>
+    <div id="caixa2" class="caixa"></div>
+    <div id="caixa3" class="caixa"></div>
     <script src="ambiente.js"></script>
 </body>
 </html>
