--- a/CFBCursos/desafio04-Calculadora/index.html
+++ b/CFBCursos/desafio04-Calculadora/index.html
@@ -9,28 +9,28 @@
 <body>
     <div id="calculadora">
         <!-- <div id="copiar">Copy</div> -->
-        <div id="visor"><p>0</p></div>
+        <div id="visor"><p id="pvisor">0</p></div>
         <div id="zerar">C</div>
-        <div>+</div>
-        <div>-</div>
-        <div>x</div>
-        <div>÷</div>
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>
-        <div>&#60; =</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>&#40;</div>
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>&#41;</div>
-        <div>0</div>
-        <div>,</div>
-        <div>=</div>
-        <div>Answ</div>
+        <div class="operador">+</div>
+        <div class="operador">-</div>
+        <div class="operador">x</div>
+        <div class="operador">÷</div>
+        <div class="botaoNumerico">7</div>
+        <div class="botaoNumerico">8</div>
+        <div class="botaoNumerico">9</div>
+        <div id="deletar">&#60; =</div>
+        <div class="botaoNumerico">4</div>
+        <div class="botaoNumerico">5</div>
+        <div class="botaoNumerico">6</div>
+        <div id="abreParenteses">&#40;</div>
+        <div class="botaoNumerico">1</div>
+        <div class="botaoNumerico">2</div>
+        <div class="botaoNumerico">3</div>
+        <div id="fechaParenteses">&#41;</div>
+        <div class="botaoNumerico">0</div>
+        <div class="virgula">,</div>
+        <div id="fazerConta">=</div>
+        <div class="resultado">Answ</div>
     </div>
     <script src="ambiente.js"></script>
 </body>
