quase final calculadora

--- a/CFBCursos/desafio04-Calculadora/index.html
+++ b/CFBCursos/desafio04-Calculadora/index.html
@@ -28,7 +28,7 @@
         <div class="botaoNumerico">3</div>
         <div id="fechaParenteses">&#41;</div>
         <div class="botaoNumerico">0</div>
-        <div class="virgula">,</div>
+        <div id="virgula">,</div>
         <div id="fazerConta">=</div>
         <div class="resultado">Answ</div>
     </div>
