inserido botão de answer

--- a/CFBCursos/desafio04-Calculadora/index.html
+++ b/CFBCursos/desafio04-Calculadora/index.html
@@ -30,7 +30,7 @@
         <div class="botaoNumerico">0</div>
         <div id="virgula">,</div>
         <div id="fazerConta">=</div>
-        <div class="resultado">Answ</div>
+        <div id="resultado">Answ</div>
     </div>
     <script src="ambiente.js"></script>
 </body>
