botao de copiar na calculadora

--- a/CFBCursos/desafio04-Calculadora/index.html
+++ b/CFBCursos/desafio04-Calculadora/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="calculadora">
         <!-- <div id="copiar">Copy</div> -->
-        <div id="visor"><p id="pvisor">0</p></div>
+        <div id="visor"><p id="copy">copy</p><p id="pvisor">0</p></div>
         <div id="zerar">C</div>
         <div class="operador">+</div>
         <div class="operador">-</div>
