melhorias na calculadora

--- a/CFBCursos/aula0076/index.html
+++ b/CFBCursos/aula0076/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="numero" class="numero"></div>
     <button id="btn_promessa">Clique para Iniciar</button>
+    <a href="" target="_blank" title="fsa" rel="external"></a>
     <script src="ambiente.js"></script>
 </body>
 </html>
