--- a/CFBCursos/aula0076/index.html
+++ b/CFBCursos/aula0076/index.html
@@ -9,6 +9,8 @@
     <div id="numero" class="numero"></div>
     <button id="btn_promessa">Clique para Iniciar</button>
     <a href="" target="_blank" title="fsa" rel="external"></a>
+    <iframe src="ex" frameborder="0" sandbox=""></iframe>
+    <input type="email">
     <script src="ambiente.js"></script>
 </body>
 </html>
